# system_theme

./: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
.github/: FUNDING.yml  README.md
.github/workflows/: flutter_analysis.yml  main.yml
android/: build.gradle
example/: .gitignore  README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: system_theme.podspec
lib/: system_theme.dart  system_theme_widget.dart
linux/: CMakeLists.txt  system_theme_plugin.cc  system_theme_plugin_private.h
macos/: system_theme.podspec
system_theme/: .pubignore  CHANGELOG.md  LICENSE  pubspec.yaml
system_theme_web/: .flutter-plugins  .flutter-plugins-dependencies  CHANGELOG.md  README.md  pubspec.yaml
test/: system_theme_test.dart
windows/: CMakeLists.txt  system_theme_plugin.cpp  system_theme_plugin.h  system_theme_plugin_c_api.cpp
windows/SystemTheme/Windows10Colors-master/: README.md  Windows10Colors.sln
windows/SystemTheme/Windows10Colors-master/PaintWin10Colors/: PaintWin10Colors.cpp  PaintWin10Colors.rc  PaintWin10Colors.vcxproj  PaintWin10Colors.vcxproj.filters  Resource.h  stdafx.cpp  stdafx.h
windows/SystemTheme/Windows10Colors-master/Windows10Colors/: Windows10Colors.cpp  Windows10Colors.h
windows/Windows10Colors/: Windows10Colors.h  Windows10Colors.vcxproj  Windows10Colors.vcxproj.filters
windows/include/system_theme/: system_theme_plugin.h  system_theme_plugin_c_api.h
windows/test/: system_theme_plugin_test.cpp
(+30 files in other folders)
